--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="hero center">
       <img src="assets/img/hk@3x.png" />
-      <h2>Hi, I'm Hossein Karami</h2>
+      <h2>Hi, I'm somaye khazaii</h2>
       <h4>Front-End Developer</h4>
       <h6>
         <a href="/works">WORKS</a> -
