--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="hero center">
-   <img src="assets/img/hk@3x.png" />
+   <img src="assets/img/sk.jpg" />
  
  
       <h2>Hi, I'm somaye khazaii</h2>
