--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="hero center">
-    <img src="assets/IMG_20161202_211006.jpg" />
+   <img src="assets/img/hk@3x.png" />
  
  
       <h2>Hi, I'm somaye khazaii</h2>
