--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="hero center">
-   <img src="assets/img/s.jpg" />
+   <img src="assets/img/g.jpg" />
+
  
  
       <h2>Hi, I'm somaye khazaii</h2>
